--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tool": "node test-tool.js"
+    "tools": "node test-tool.js"
   },
   "author": "",
   "license": "ISC",
